--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,8 @@
-// 1. Definisikan palet warna Dracula
-$dracula-bg:        #282a36; // Background
-$dracula-current:   #44475a; // Current Line (untuk card, navbar, dll)
-$dracula-fg:        #f8f8f2; // Foreground (Teks utama)
-$dracula-comment:   #6272a4; // Comment (Teks sekunder/muted)
+//palet warna Dracula
+$dracula-bg:        #282a36;
+$dracula-current:   #44475a;
+$dracula-fg:        #f8f8f2;
+$dracula-comment:   #6272a4;
 $dracula-cyan:      #8be9fd;
 $dracula-green:     #50fa7b;
 $dracula-orange:    #ffb86c;
@@ -11,7 +11,6 @@ $dracula-purple:    #bd93f9;
 $dracula-red:       #ff5555;
 $dracula-yellow:    #f1fa8c;
 
-// 2. Timpa (override) variabel warna default Bootstrap
 // --- Warna Tema Utama ---
 $primary:       $dracula-purple;
 $secondary:     $dracula-comment;
@@ -19,8 +18,8 @@ $success:       $dracula-green;
 $info:          $dracula-cyan;
 $warning:       $dracula-yellow;
 $danger:        $dracula-red;
-$light:         $dracula-current; // Warna terang kita adalah background komponen
-$dark:          $dracula-bg;      // Warna gelap kita adalah background utama
+$light:         $dracula-current;
+$dark:          $dracula-bg;
 
 // --- Warna Body & Teks ---
 $body-bg:       $dracula-bg;
@@ -38,6 +37,5 @@ $navbar-dark-hover-color: $dracula-fg;
 $navbar-dark-active-color: $dracula-fg;
 $navbar-dark-brand-color: $dracula-fg;
 
-// 3. Impor seluruh library Bootstrap SASS
 // Path ini merujuk ke file di dalam node_modules
 @import "bootstrap/scss/bootstrap";
